--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     grid-gap: 4px;
     grid-template-rows: 100px 100px 1fr 1fr;
     grid-template-columns: 80px 1fr 30px;
+    background-color: black;
 }
 
 .item {
@@ -19,22 +20,44 @@ body {
 .one {
     grid-row: 1;
     grid-column: 1;
+    -ms-grid-column-span: 3fr;
 }
 
 .two {
+    background-color: red;
+    grid-column-start: 2;
+    grid-column-end: -1;
+    grid-row: 1 / 3;
 }
 
 .three {
+    grid-row-start: 2;
+
 }
 
 .four {
+    background-color: blue;
+    grid-row-start: 3;
+    grid-row-end: -1;
 }
 
 .five {
+    grid-row-start: 3;
+    grid-row-end: -1;
+
+
 }
 
 .six {
+    grid-row-start: 3;
+
 }
 
 .seven {
+    background-color: yellow;
+    grid-row-start: 4;
+    grid-column-start: 3;
+
+
+
 }
